fix(elements | InputDate): Prevent presets wrapping to next line when date field width is less
Merged in fix/InputDate (pull request #83)

Approved-by: Rahul Tiwari <rahul.tiwari@myntra.com>

--- a/packages/@myntra/uikit-elements/src/InputDate/Picker/Picker.module.css
+++ b/packages/@myntra/uikit-elements/src/InputDate/Picker/Picker.module.css
@@ -1,4 +1,3 @@
 .picker {
   display: flex;
-  flex-wrap: wrap;
 }
