--- a/packages/@myntra/uikit-elements/src/InputDate/Picker/Preset.module.css
+++ b/packages/@myntra/uikit-elements/src/InputDate/Picker/Preset.module.css
@@ -15,6 +15,7 @@
   line-height: var(--typography-text-smallText-line-height);
   cursor: pointer;
   user-select: none;
+  white-space: nowrap;
 }
 
 .preset + .preset {
